  CR: Service Template Meta: Consolidation of header, data and footer in data only
      Exclusive data can be separated using custom keys such as header, data and footer.
      The overlays for header and footer thus also support collections.
      Functionally there is now no difference between header, data and footer.

3.5.1 20200316
  BF: Service Template Includes: Correction when following includes with absolute path
  BF: Service Template Includes: Optimization for recursion detection 
  BF: Service Template Generate: Correction for using the resource base as the basis of the includes
  BF: Documentation: Corrections der Versions in the sources
  CR: Service Template: Use TemplateResourceNotFoundException for FileNotFoundException
      When a resource cannot be found.
  CR: Service Template Meta: Added method Meta::GetBasePath
      Returns the resources path.
  CR: Service Generate: Added an version with template class
  CR: Test: Updates of test cases

3.5.0 20200313
  CR: OpenHtmlToPdf: Update to version 1.0.2
  CR: Service Template: Added support for meta directive #import 
      Starts a line with #import then a space and then relative or absolute the
      path expects a resource with markup to be inserted at that place.
          e.g. #import address.html
      The sections are independent and now use the global scope.
  CR: Service Template Meta: Renaming from dataset to data
  CR: Service Template Meta: Change of the data type from data/dataset to Map
  CR: Service Template Meta: Omission of option smart
      The same effect can be achieved with CSS + page break.
  CR: Template: Omission of the generator sections (header, data/dataset, footer)
  CR: Test: Update of test cases

3.4.1 20200308
  CR: Test: Update of test cases
  CR: Maven: Preparation for sonatype.org + mvnrepository.com

3.4.0 20200301
  BF: Service: Optimization of the overlay technique for header and footer
  BF: Preview: Correction in the creation of MockUp lists